# build-and-finetune-gpt-from-scratch

./: .gitignore  README.md  pyproject.toml  verify_backward.py
notebooks/: 01_data_cleaning.ipynb  02_Tokenization.ipynb  03_data_loader.ipynb  04_embedding.ipynb  05_attention.ipynb  06_dummy_gpt_model.ipynb  07_layer_norm.ipynb  08_feed_forward.ipynb  09_transformer_block.ipynb  10_GPT_MODEL.ipynb  11_training_and_eval_loops.ipynb  12_Decoding_stratefies.ipynb  13_loading_openAi_pretrained_weights.ipynb
notebooks/Instruction_Finetuning/: instruction_fine-tuning.ipynb  model_evaluation.ipynb
notebooks/fine-tuning_for_classification/: 01_classification_fine-tuning.ipynb  data_loader.py
src/: GPT_model.py
src/GPT_blocks/: attention_blocks.py  feed_forward.py  layer_norm.py  transformer_block.py
