[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "sentencepiece>=0.2.1",
]

[tool.uv.sources]
gpt-from-scratch = { workspace = true }

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "gpt-from-scratch",
    "twine>=6.1.0",
    "tokenizers>=0.21.1",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
exclude = [".venv"]
# Ignored rules (W504 removed)
ignore = [
    "C406", "E226", "E402", "E702", "E703",
    "E722", "E731", "E741"
]
